# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Eclipse Public License.
#
# Author:  Andreas Waechter           IBM    2006-04-13

noinst_PROGRAMS =

AM_LDFLAGS = $(LT_LDFLAGS)

########################################################################
#                         unitTest for OsiClp                          #
########################################################################

if COIN_HAS_OSITESTS

noinst_PROGRAMS += osiUnitTest

osiUnitTest_SOURCES = osiUnitTest.cpp OsiClpSolverInterfaceTest.cpp

osiUnitTest_LDADD = ../src/libClp.la ../src/OsiClp/libOsiClp.la \
	$(CLPLIB_LFLAGS) $(OSICLPLIB_LFLAGS) $(OSICLPUNITTEST_LFLAGS)

osiUnitTest_CPPFLAGS = -I$(srcdir)/../src -I$(srcdir)/../src/OsiClp $(OSICLPUNITTEST_CFLAGS)

testdepend = osiUnitTest$(EXEEXT)
endif

########################################################################
#                      LP Racing unit test                             #
########################################################################

noinst_PROGRAMS += testRacingLP

testRacingLP_SOURCES = test_racing_lp.cpp

testRacingLP_LDADD = ../src/libClp.la ../src/OsiClp/libOsiClp.la \
	$(CLPLIB_LFLAGS) $(OSICLPLIB_LFLAGS)

testRacingLP_CPPFLAGS = -I$(srcdir)/../src -I$(srcdir)/../src/OsiClp $(OSICLPLIB_CFLAGS)

########################################################################
#                         unitTest for Clp                             #
########################################################################

unittestflags = 
osiunittestflags =
if COIN_HAS_SAMPLE
  unittestflags += -dirSample `$(CYGPATH_W) $(SAMPLE_DATA)`
  osiunittestflags += -mpsDir=`$(CYGPATH_W) $(SAMPLE_DATA)`
endif
unittestflags += -unitTest
if COIN_HAS_NETLIB
  unittestflags += -dirNetlib `$(CYGPATH_W) $(NETLIB_DATA)` -netlib
  osiunittestflags += -netlibDir=`$(CYGPATH_W) $(NETLIB_DATA)` -testOsiSolverInterface
endif

# We are using the CLP solver executable to do the unit test
test: ../src/clp$(EXEEXT) $(testdepend) testRacingLP$(EXEEXT)
	../src/clp$(EXEEXT) $(unittestflags) || exit 1
	if test -e osiUnitTest$(EXEEXT) ; then \
	  ./osiUnitTest$(EXEEXT) $(osiunittestflags) || exit 1 ; \
	fi
	./testRacingLP$(EXEEXT) || exit 1

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

CLEANFILES = *.mps.gz *.out.gz *.lp
